Prevents members from causing horizontal scroll on small screens

--- a/app/_scss/home/members.scss
+++ b/app/_scss/home/members.scss
@@ -76,6 +76,7 @@
 			width: 100%; height: 17em;
 			position: relative; top: 0;
 			margin-bottom: 2.6em;
+			padding: 0;
 
 			img {
 				width: 33%;
